[package]
name = "titancore_free"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
aes-gcm-siv = "0.11"
pqcrypto-kyber = "0.7"
pqcrypto-dilithium = "0.7"
sha2 = "0.10"
hkdf = "0.12"
zeroize = "1.6"
blake3 = "1.3"
getrandom = "0.2"
parking_lot = "0.12"
rand = "0.8"

[lib]
crate-type = ["cdylib"]
