[package]
name = "titancore_free"
version = "0.1.0"
edition = "2021"
authors = ["Rahul Sarkar <you@example.com>"]
description = "TitanCore Sovereign PQC + AES-GCM-SIV Engine"
license = "MIT"
repository = "https://github.com/titancorehelp-crypto/titancore_free"

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
aes-gcm-siv = "0.11"
pqcrypto-kyber = "0.7"
pqcrypto-dilithium = "0.5.0"
pqcrypto-traits = "0.3"
sha2 = "0.10"
hkdf = "0.12"
zeroize = "1.6"
blake3 = "1.3"
getrandom = "0.2"
parking_lot = "0.12"
rand = "0.8"
hex = "0.4"

[lib]
crate-type = ["cdylib"]
